@@ -20,7 +20,7 @@ dnl   License along with this program; if not, write to the Free Software
 dnl   Foundation, Inc., 675 Mass Ave, Cambridge, MA 02139, USA.
 dnl
 
-AC_INIT(aws-sdk-cpp-s3,m4_esyscmd(cat PACKAGE_VERSION))
+AC_INIT(aws-sdk-cpp-s3,m4_esyscmd(cat API_VERSION))
 AM_INIT_AUTOMAKE
 AC_SUBST(RPM_RELEASE,1)
 m4_ifdef([AM_SILENT_RULES],[AM_SILENT_RULES([yes])])
