@@ -1,2 +1,5 @@
 2025-03-28 Fred Gleason <fredg@paravelsystems.com>
 	* Initial package creation.
+2025-03-28 Fred Gleason <fredg@paravelsystems.com>
+	* Added code to automatically detect the API version from the
+	source tree.
